# cix_2025

./: .gitignore  01_Introduction.ipynb  02_Exercise.ipynb  03_Review.ipynb  README.md  pyproject.toml  start.bat  todo.txt
src/: zmqutils.py
