[project]
name = "cix-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "cmasher>=1.9.2",
    "flax>=0.10.6",
    "jax==0.5.3",
    "jaxlib==0.5.3",
    "jupyter>=1.1.1",
    "keyboard>=0.13.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pyzmq>=26.4.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "zmq>=0.0.0",
]
